--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,13 @@
-spring:
-  application:
-    name: eureka
 management:
   context-path: /admin
+
 eureka:
-  server:
-    waitTimeInMsWhenSyncEmpty: 1000
   client:
     serviceUrl:
       defaultZone: http://localhost:8080/v2/
       default.defaultZone: http://localhost:8080/v2/
     registerWithEureka: false
     fetchRegistry: false
+  instance:
+    statusPageUrlPath: /admin/info
+    healthCheckUrlPath: /admin/health
