--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,4 +6,4 @@ spring:
   profiles: cloud
   platform:
     config:
-      uri: ${vcap.services.configserver.credentials.uri}
+      uri: ${vcap.services.configserver.credentials.uri:http://localhost:8888}
