--- a/.gitignore
+++ b/.gitignore
@@ -2,34 +2,6 @@
 #*
 *#
 .#*
-*~
-#*
-*#
-.#*
-*~
-#*
-*#
-.#*
-*~
-#*
-*#
-.#*
-*~
-#*
-*#
-.#*
-*~
-#*
-*#
-.#*
-*~
-#*
-*#
-.#*
-*~
-#*
-*#
-.#*
 .classpath
 .project
 .settings
@@ -38,3 +10,4 @@
 build
 bin
 /target/
+git.properties
