--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,10 @@
 			<artifactId>jersey-servlet</artifactId>
 			<version>1.13</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>com.netflix.eureka</groupId>
 			<artifactId>eureka-core</artifactId>
@@ -99,7 +103,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<start-class>demo.Application</start-class>
+		<start-class>eurekademo.Application</start-class>
 		<java.version>1.7</java.version>
 	</properties>
 
