added requiresUnpack for eureka jersey resources as the requiresUnpack from spring-cloud-starters is ignored.
Fixes gh-22

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,19 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <!-- TODO: shouldn't be required here, defined in spring-cloud-starters pom, but ignored -->
+                <configuration>
+                    <requiresUnpack>
+                        <dependency>
+                            <groupId>com.netflix.eureka</groupId>
+                            <artifactId>eureka-core</artifactId>
+                        </dependency>
+                        <dependency>
+                            <groupId>com.netflix.eureka</groupId>
+                            <artifactId>eureka-client</artifactId>
+                        </dependency>
+                    </requiresUnpack>
+                </configuration>
             </plugin>
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
