--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,4 +7,29 @@ eureka:
     fetchRegistry: false
   server:
     waitTimeInMsWhenSyncEmpty: 0
+
+---
+spring:
+  profiles: peer # not standalone
+eureka:
+  instance:
+    hostname: 127.0.1.1
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://127.0.0.1:8762/eureka/
+
+---
+spring:
+  profiles: other # not standalone
+server:
+  port: 8762
+eureka:
+  instance:
+    hostname: 127.0.0.1
+    nonSecurePort: ${server.port}
+  client:
+    serviceUrl:
+      defaultZone: http://127.0.1.1:8761/eureka/
     
