--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8761
 security:
   user:
-    password: ${eureka.password:${SECURITY_USER_PASSWORD:password}} # Don't use a default password in a real app
+    password: ${eureka.password} # Don't use a default password in a real app
 
 eureka:
   client:
@@ -10,6 +10,7 @@ eureka:
     fetchRegistry: false
   server:
     waitTimeInMsWhenSyncEmpty: 0
+  password: ${SECURITY_USER_PASSWORD:password}
 
 ---
 spring:
@@ -46,6 +47,6 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://user:${security.user.password}@${PREFIX:}eureka.cfapps.io/eureka/
+      defaultZone: http://user:${eureka.password}@${PREFIX:}eureka.cfapps.io/eureka/
 
   
