--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,89 @@
-*~
-#*
-*#
-.#*
-.classpath
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
+!ru.alfabank.opp.*.ear
+*.pydevproject
 .project
-.settings
-.springBeans
-.gradle
-build
-bin
-/target/
-git.properties
-.idea
+.metadata
+target/2
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+
+.buildpath
 *.iml
+*.ipr
+*.iws
+.idea/
+**/*.iml
+**/.idea/
+*~
+.gradle
+/build
+/out
+/intTestHomeDir
+/subprojects/*/out
+/intellij
+/reports
+/buildSrc/lib
+/buildSrc/build
+/subprojects/*/build
+/subprojects/docs/src/samples/*/*/build
+/website/build
+/website/website.iml
+/website/website.ipr
+/website/website.iws
+/performanceTest/build
+/subprojects/*/ide
+/*.iml
+/*.ipr
+/*.iws
+/subprojects/*/*.iml
+/buildSrc/*.ipr
+/buildSrc/*.iws
+/buildSrc/*.iml
+/buildSrc/out
+*.classpath
+*.project
+*.settings
+/bin
+/subprojects/*/bin
+.DS_Store
+/performanceTest/lib
+.textmate
+/incoming-distributions
+.idea
+*.sublime-*
+.nb-gradle
+/classes
+build
+gradle.properties
+checkstyle-config.xml
+pmd-config.xml
+findbugs-config.xml
+derbyDB
+derby.log
+*.log
+**/resources/rebel.xml
