--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,9 @@
 			<plugin>
 				<groupId>pl.project13.maven</groupId>
 				<artifactId>git-commit-id-plugin</artifactId>
+                <configuration>
+                  <failOnNoGitDirectory>false</failOnNoGitDirectory>
+                </configuration>
 			</plugin>
 			<plugin>
 				<!--skip deploy (this is just a test module) -->
