--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ apply plugin: 'idea'
 ext {
     name = 'Eureka Server'
     description = 'Eureka Server demo project' 
-    version='0.0.1'
+    version='0.0.1-SNAPSHOT'
     sourceEncoding='UTF-8'
 }
 
