--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -3,4 +3,4 @@ VOLUME /tmp
 ADD eureka-0.0.1-SNAPSHOT.jar /app.jar
 RUN bash -c 'touch /app.jar'
 EXPOSE 8761
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
