Add security to demonstrate usage

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,23 @@
 server:
   port: 8761
 
+spring:
+  security:
+    user:
+      name: admin
+      password: pwd
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
+
 eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+    service-url:
+      defaultZone:  http://admin:pwd@localhost:8761/eureka/
   server:
     waitTimeInMsWhenSyncEmpty: 0
