--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,11 @@
-
-buildscript {
-    repositories {
-        jcenter()
-        maven { url "https://repo.spring.io/libs-snapshot-local" }
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.4.3.RELEASE")
-    }
+plugins{
+    id 'org.springframework.boot' version '2.6.1'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'java'
 }
 
-apply plugin: 'spring-boot'
-apply plugin: 'idea'
-
 ext {
+    set('springCloudVersion', "2021.0.0")
     name = 'Eureka Server'
     description = 'Eureka Server demo project' 
     version='0.0.1-SNAPSHOT'
@@ -29,17 +22,17 @@ repositories {
 
 dependencyManagement {
 	imports { 
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:Brixton.BUILD-SNAPSHOT"
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
 
 dependencies {
-    compile 'org.springframework.cloud:spring-cloud-starter-eureka-server'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
 
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
-    testCompile "junit:junit"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '2.3'
+test{
+    useJUnitPlatform()
 }
+
