--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins{
-    id 'org.springframework.boot' version '2.6.1'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '3.1.0'
+    id 'io.spring.dependency-management' version '1.1.0'
     id 'java'
 }
 
 ext {
-    set('springCloudVersion', "2021.0.0")
+    set('springCloudVersion', "2022.0.3")
     name = 'Eureka Server'
     description = 'Eureka Server demo project' 
     version='0.0.1-SNAPSHOT'
