--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -5,7 +5,7 @@ on:
     # branches:
     #   - "develop"
     tags:
-      - "server-v*"
+      - "client-v*"
 
 jobs:
   ci:
@@ -27,9 +27,9 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/yevgen-grytsay/eureka-server
+          images: ghcr.io/yevgen-grytsay/eureka-client
           tags: |
-            type=semver,pattern=server-v{{version}}
+            type=semver,pattern=client-v{{version}}
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -41,7 +41,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          file: Dockerfile.server
+          file: Dockerfile.client
           context: .
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
