--- a/.github/workflows/client.yaml
+++ b/.github/workflows/client.yaml
@@ -29,7 +29,7 @@ jobs:
         with:
           images: ghcr.io/yevgen-grytsay/eureka-client
           tags: |
-            type=semver,pattern=client-v{{version}}
+            type=semver,prefix=client-,pattern={{version}}
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
