--- a/.github/workflows/server.yaml
+++ b/.github/workflows/server.yaml
@@ -29,7 +29,7 @@ jobs:
         with:
           images: ghcr.io/yevgen-grytsay/eureka-server
           tags: |
-            type=semver,pattern=server-v{{version}}
+            type=semver,prefix=server-,pattern={{version}}
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
